<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightgreen"
    tools:context=".questions">

    <ImageView
        android:id="@+id/questionPic"
        android:layout_width="match_parent"
        android:layout_height="310dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="-1dp"
        android:contentDescription="@string/a_picture_of_2_puppies"
        app:layout_constraintBottom_toTopOf="@+id/firstOption"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.536"
        tools:srcCompat="@drawable/dogpic" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/secondOption"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="464dp"
        android:background="@color/lightgray"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/dug"
        android:textColor="@color/lightred"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/thirdOption"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_alignParentStart="true"
        android:layout_marginTop="564dp"
        android:background="@color/lightgray"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/doj"
        android:textColor="@color/lightred"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/firstOption"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="364dp"
        android:background="@color/lightgray"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/dog"
        android:textColor="@color/lightred"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/checkmark"
        android:layout_width="138dp"
        android:layout_height="310dp"
        android:layout_alignParentTop="true"

        android:layout_centerInParent="true"
        android:layout_marginTop="-1dp"
        android:contentDescription="@string/checkmark"
        android:gravity="center_vertical"
        android:visibility="invisible"
        app:srcCompat="@drawable/greencheck" />

    <ImageView
        android:id="@+id/wrongmark"
        android:layout_width="138dp"
        android:layout_height="310dp"
        android:layout_alignParentTop="true"

        android:layout_centerInParent="true"
        android:layout_marginTop="0dp"
        android:contentDescription="@string/wrongmark"
        android:gravity="center_vertical"
        android:visibility="invisible"
        app:srcCompat="@drawable/wrongmark" />

</RelativeLayout>