<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightgreen"
    tools:context=".thirdQuestion">

    <ImageView
        android:id="@+id/fishPic"
        android:layout_width="match_parent"
        android:layout_height="278dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="-2dp"
        android:contentDescription="@string/a_picture_of_a_fish"
        app:layout_constraintBottom_toTopOf="@+id/fishOpt1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.536"
        tools:srcCompat="@drawable/fishpic" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/fishOpt1"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_alignParentStart="true"
        android:layout_marginTop="364dp"
        android:text="@string/fis"
        android:textSize="20sp"
        android:gravity="center_horizontal|center_vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/lightgray"
        android:textColor="@color/lightred"
        android:textStyle="bold"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/fishOpt2"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_alignParentStart="true"
        android:gravity="center_horizontal|center_vertical"
        android:layout_marginTop="464dp"
        android:text="@string/fish"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/lightgray"
        android:textColor="@color/lightred"
        android:textStyle="bold"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/fishOpt3"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_alignParentStart="true"
        android:gravity="center_horizontal|center_vertical"
        android:layout_marginTop="564dp"
        android:text="@string/fich"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/lightgray"
        android:textColor="@color/lightred"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/checkmark3"
        android:layout_width="126dp"
        android:layout_height="274dp"
        android:layout_alignParentTop="true"

        android:layout_centerInParent="true"
        android:contentDescription="@string/checkmark"
        android:gravity="center_vertical"
        android:visibility="invisible"
        app:srcCompat="@drawable/greencheck"
        tools:visibility="invisible" />

    <ImageView
        android:id="@+id/wrongmark3"
        android:layout_width="134dp"
        android:layout_height="273dp"
        android:layout_alignParentTop="true"

        android:layout_centerInParent="true"
        android:contentDescription="@string/wrongmark"
        android:gravity="center_vertical"
        android:visibility="invisible"
        app:srcCompat="@drawable/wrongmark"
        tools:visibility="invisible" />
</RelativeLayout>