<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightgreen"
    tools:context=".EndScreen">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/restartBtn"
        android:layout_width="147dp"
        android:layout_height="61dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"

        android:layout_centerInParent="true"
        android:layout_marginStart="135dp"
        android:layout_marginTop="426dp"
        android:background="@color/lightgray"
        android:text="@string/restart"
        android:textAlignment="center"
        android:textColor="@color/lightred"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tryagainText"
        app:layout_constraintVertical_bias="0.047" />

    <TextView
        android:id="@+id/completeText"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"

        android:layout_alignParentEnd="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="-1dp"
        android:layout_marginTop="160dp"
        android:layout_marginEnd="1dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/complete"
        android:textColor="@color/lightred"
        android:textSize="60sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.373" />

    <TextView
        android:id="@+id/userScoreText"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"

        android:layout_alignParentEnd="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="-1dp"
        android:layout_marginTop="268dp"
        android:layout_marginEnd="1dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="Score:    /3"
        android:textColor="@color/lightred"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.373" />

    <TextView
        android:id="@+id/userScore"
        android:layout_width="61dp"
        android:layout_height="65dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"

        android:layout_alignParentEnd="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="211dp"
        android:layout_marginTop="272dp"
        android:layout_marginEnd="139dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="X"
        android:textColor="@color/lightred"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.373" />

    <TextView
        android:id="@+id/tryagainText"
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"

        android:layout_alignParentEnd="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="357dp"
        android:layout_marginEnd="0dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/try_again"
        android:textColor="@color/lightred"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.373" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/leaveBtn"
        android:layout_width="97dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"

        android:layout_alignParentEnd="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="311dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="3dp"
        android:background="@color/lightgray"
        android:text="@string/leaveBtn"
        android:textAlignment="center"
        android:textColor="@color/lightred"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tryagainText"
        app:layout_constraintVertical_bias="0.047" />

</RelativeLayout>